[DROOLS-7337] Options and Configuration improvement (#5000)
* DROOLS-7337 Options and Configuration improvement

* wip

---------

Co-authored-by: Mark Proctor <mdproctor@gmail.com>